--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
-  "name": "deepgram-starter-react-ui",
+  "name": "deepgram-javascript-01",
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm-run-all --parallel spa api-server",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "dev": "react-scripts start"
+    "spa": "react-scripts start",
+    "server": "node server.js",
+    "server:dev": "nodemon server.js",
+    "api-server": "node api-server.js",
+    "api-server:dev": "nodemon api-server.js",
+    "dev": "npm-run-all --parallel spa api-server:dev",
+    "prod": "npm-run-all --parallel server api-server"
   },
   "dependencies": {
     "@babel/core": "^7.21",
@@ -14,6 +20,10 @@
     "@babel/plugin-transform-react-jsx": "^7.21",
     "@deepgram/sdk": "^1.18.1",
     "@icons-pack/react-simple-icons": "^7.1.0",
+    "cors": "^2.8",
+    "express": "^4.18",
+    "multer": "^1.4.5-lts.1",
+    "npm-run-all": "^4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3",
@@ -22,6 +32,7 @@
   "devDependencies": {
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
+    "nodemon": "^2.0",
     "postcss": "^8.4",
     "tailwindcss": "^3.2.7"
   },
